Add Mutation Testing (#28)
* Add PITest plugin

* Add a couple of additional tests to kill some mutations.

* Add test coverage for TupleExpressionGenerator

Fix some copy/paste bugs in the return type interfaces.

* Expanded test suite to cover more methods

Very nice things, all the way around.

* Use Java 11 for Sonar

* Fix Gradle configuration

Apply pitest only to the fasttuple-core